package mics;

public class Progress {
    public static boolean defeatLog;

    
}
